--- a/css/flex.html
+++ b/css/flex.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="parent">
-        <div class="child"></div>
+        <div class="child">hello</div>
         <div class="child"></div>
         <div class="child"></div>
         <div class="child"></div>
